--- a/LearnMoto/app/src/main/res/layout/activity_subject_video.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_subject_video.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@drawable/background"
-    tools:context=".SubjectVideo">
+    tools:context=".Teacher.SubjectVideo">
 
     <LinearLayout
         android:layout_width="match_parent"
