--- a/LearnMoto/app/src/main/res/layout/video_name_list.xml
+++ b/LearnMoto/app/src/main/res/layout/video_name_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="5sp"
     app:cardCornerRadius="2sp"
@@ -10,12 +10,12 @@
     app:cardBackgroundColor="@color/light_green">
 
     <TextView
-        android:id="@+id/Name"
+        android:id="@+id/videoName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Name"
+        android:text="Video Name"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="@color/white"/>
 
 </androidx.cardview.widget.CardView>
