Show List of Video per Teacher(Update)

--- a/LearnMoto/app/src/main/res/layout/activity_kinder_class_list.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kinder_class_list.xml
@@ -30,7 +30,7 @@
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="25sp"
-          android:text="Nursery Class List"
+          android:text="Kinder Class List"
           android:fontFamily="@font/aloevera"
           android:textColor="@color/fontColor"/>
 
