--- a/LearnMoto/app/src/main/res/layout/activity_preparatory_class_list.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_preparatory_class_list.xml
@@ -29,8 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textSize="25sp"
-                android:text="Nursery Class List"
+                android:textSize="23sp"
+                android:text="Preparatory Class List"
                 android:fontFamily="@font/aloevera"
                 android:textColor="@color/fontColor"/>
 
