--- a/LearnMoto/app/src/main/res/layout/view_list_video.xml
+++ b/LearnMoto/app/src/main/res/layout/view_list_video.xml
@@ -17,6 +17,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Uploaded Videos"
+        android:fontFamily="@font/aloevera"
+        android:textSize="22sp"
+        android:layout_marginVertical="10sp"
+        android:textColor="@color/black"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/NoDataFound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No Data Found"
+        android:visibility="gone"
+        android:fontFamily="@font/aloevera"
         android:textSize="18sp"
         android:layout_marginVertical="10sp"
         android:textColor="@color/black"
