--- a/LearnMoto/app/src/main/res/layout/activity_alphabet.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_alphabet.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="12dp"
     android:background="@color/white"
-    tools:context=".Alphabet">
+    tools:context=".Student.Alphabet">
 
     <LinearLayout
         android:layout_width="match_parent"
