--- a/LearnMoto/app/src/main/res/layout/activity_first_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_first_story.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Nursery.Story.FirstStory"
+    tools:context=".Nursery.Story.NFirstStory"
     android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/transparent1"
         android:orientation="vertical">
 
         <!--        <include layout="@layout/toolbar"/>-->
@@ -46,18 +47,9 @@
             android:layout_marginTop="16dp"
             android:padding="10dp"
             android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textSize="20sp"
             android:text="Story"/>
 
-        <!--            <TextView-->
-        <!--                android:id="@+id/storytelling"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_marginVertical="10dp"-->
-        <!--                android:padding="15dp"-->
-        <!--                android:textColor="@color/black"-->
-        <!--                android:text="Story"-->
-        <!--                android:textAlignment="center" />-->
 
         <LinearLayout
             android:layout_width="wrap_content"
