--- a/LearnMoto/app/src/main/res/layout/activity_pronounce_alphabet.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_pronounce_alphabet.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background"
-    tools:context=".PronounceAlphabet">
+    tools:context=".Student.PronounceAlphabet">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,8 +30,9 @@
             android:textColor="@color/black"/>
 
     </LinearLayout>
-    
+
     <GridView
+        android:background="@color/transparent1"
         android:id="@+id/grid"
         android:numColumns="4"
         android:layout_gravity="center_horizontal"
