--- a/LearnMoto/app/src/main/res/layout/activity_teacher_registration.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_teacher_registration.xml
@@ -62,11 +62,25 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_input"
-            android:drawableLeft="@drawable/custom_icon_phone"
+            android:drawableStart="@drawable/custom_icon_phone"
             android:drawablePadding="10dp"
             android:hint="Phone Number"
             android:inputType="phone"
             android:maxLength="11"
+            android:padding="10dp"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/TeacherEmail"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/custom_icon_email"
+            android:drawablePadding="10dp"
+            android:hint="Email Address"
+            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textSize="16sp" />
 
@@ -114,33 +128,6 @@
             android:inputType="textPassword"
             android:padding="10dp"
             android:layout_marginBottom="15dp"/>
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginHorizontal="5sp"-->
-<!--                android:textSize="17dp"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:drawableStart="@drawable/ic_add"-->
-<!--                android:text="ASSIGN LEVEL"-->
-<!--                android:onClick="ShowWindowLevel"/>-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginHorizontal="5sp"-->
-<!--                android:textSize="17dp"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:drawableStart="@drawable/ic_add"-->
-<!--                android:text="ASSIGN SUBJECTS"/>-->
-
-<!--        </LinearLayout>-->
 
         <Button
             android:layout_width="200dp"
