--- a/LearnMoto/app/src/main/res/layout/activity_nursery_class_list.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_nursery_class_list.xml
@@ -43,6 +43,91 @@
             android:padding="10dp"
             android:id="@+id/nurseryClass"/>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvToDo"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/light_green"
+            app:contentPadding="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/teacherTodoLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_subject"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Create To-Do"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/aloevera"
+                        android:layout_margin="5dp"
+                        android:layout_marginStart="50dp"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/todo_arrow_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:onClick="ExpandToDo"
+                    android:background="@drawable/ic_arrow_down" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/expandToDo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:animateLayoutChanges="true"
+                android:padding="10dp">
+
+                <EditText
+                    android:id="@+id/ToDoMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:padding="10dp"
+                    android:ems="10"
+                    android:textColor="@color/black"
+                    android:hint="Enter To-do"
+                    android:layout_marginVertical="15dp"
+                    android:inputType="textMultiLine"
+                    android:textAlignment="center"
+                    android:background="@drawable/custom_input" />
+
+                <Button
+                    android:id="@+id/SendTodo"
+                    android:layout_marginVertical="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="SEND"
+                    android:onClick="SendToDo"
+                    android:background="@color/teal_200"/>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
 
     </LinearLayout>
 
