--- a/LearnMoto/app/src/main/res/layout/activity_display_student_data.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_display_student_data.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@drawable/background"
     android:padding="10dp"
-    tools:context=".DisplayStudentData">
+    tools:context=".Teacher.DisplayStudentData">
 
     <LinearLayout
         android:layout_width="match_parent"
