--- a/LearnMoto/app/src/main/res/layout/activity_parent_view.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_parent_view.xml
@@ -158,17 +158,12 @@
                     android:visibility="gone"
                     android:padding="10dp">
 
-                    <TextView
-                        android:id="@+id/announcements"
-                        android:layout_width="wrap_content"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/announcement_rv"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="ANNOUNCEMENTS
-                        ANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTS
-                        ANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTS
-                        ANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTSANNOUNCEMENTS"
-                        android:textColor="@color/black"
-                        android:padding="15dp"
-                        android:textSize="20dp"/>
+                        android:orientation="vertical"/>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
