--- a/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
@@ -19,21 +19,87 @@
             android:layout_margin="10dp">
 
             <include layout="@layout/mytoolbar"/>
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Take A Quiz"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                android:textStyle="bold"/>
 
-                <TextView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="@color/light_green"
+                app:contentPadding="10dp">
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="QUIZ"
-                    android:textSize="50dp"/>
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/layout2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:id="@+id/icon_logout"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:paddingTop="5dp"
+                            android:src="@drawable/ic_quiz"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Math Quiz"
+                            android:layout_margin="5dp"
+                            android:textColor="@color/fontColor"
+                            android:fontFamily="@font/aloevera"
+                            android:layout_marginStart="50dp"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/arrow_pdf"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/ic_arrow_down" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/expandableLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Quiz Now"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:onClick="MathQuiz"
+                        android:drawableEnd="@drawable/ic_reading"
+                        android:layout_gravity="center"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
