--- a/LearnMoto/app/src/main/res/layout/activity_settings.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_settings.xml
@@ -85,13 +85,12 @@
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"-->
 <!--                android:layout_marginTop="10dp"-->
-<!--                android:text="Profile"-->
+<!--                android:text="Notification"-->
 <!--                android:textColor="@color/white"-->
 <!--                android:textSize="15dp"-->
 <!--                android:textStyle="bold" />-->
 
 <!--            <androidx.cardview.widget.CardView-->
-<!--                android:id="@+id/changepass_cv"-->
 <!--                android:layout_width="match_parent"-->
 <!--                android:layout_height="wrap_content"-->
 <!--                app:cardCornerRadius="5dp"-->
@@ -103,136 +102,41 @@
 <!--                    android:layout_height="wrap_content">-->
 
 <!--                    <LinearLayout-->
-<!--                        android:id="@+id/layout1"-->
+<!--                        android:id="@+id/layout3"-->
 <!--                        android:layout_width="match_parent"-->
 <!--                        android:layout_height="wrap_content"-->
 <!--                        android:orientation="horizontal">-->
 
 <!--                        <ImageView-->
-<!--                            android:id="@+id/icon_changepass"-->
 <!--                            android:layout_width="wrap_content"-->
 <!--                            android:layout_height="wrap_content"-->
-<!--                            android:src="@drawable/ic_edit_pass"/>-->
+<!--                            android:src="@drawable/ic_notification"/>-->
 
 <!--                        <TextView-->
 <!--                            android:layout_width="wrap_content"-->
 <!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Change Password"-->
-<!--                            android:textColor="@color/fontColor"-->
-<!--                            android:fontFamily="@font/aloevera"-->
+<!--                            android:text="Notifications"-->
 <!--                            android:layout_margin="5dp"-->
 <!--                            android:layout_marginLeft="50dp"-->
+<!--                            android:fontFamily="@font/aloevera"-->
+<!--                            android:textColor="@color/fontColor"-->
 <!--                            android:textSize="20dp" />-->
 
 <!--                    </LinearLayout>-->
 
-<!--                    <Button-->
-<!--                        android:id="@+id/arrow_btn"-->
-<!--                        android:layout_width="30dp"-->
-<!--                        android:layout_height="30dp"-->
+<!--                    <androidx.appcompat.widget.SwitchCompat-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
 <!--                        android:layout_alignParentRight="true"-->
 <!--                        android:layout_marginStart="5dp"-->
 <!--                        android:layout_marginTop="5dp"-->
 <!--                        android:layout_marginEnd="5dp"-->
 <!--                        android:layout_marginBottom="5dp"-->
-<!--                        android:background="@drawable/ic_arrow_down" />-->
-
+<!--                        app:track="@drawable/ic_track"-->
+<!--                        android:thumb="@drawable/ic_thumb"/>-->
 <!--                </RelativeLayout>-->
 
-<!--                <LinearLayout-->
-<!--                    android:id="@+id/expandableLayout1"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="40dp"-->
-<!--                    android:orientation="vertical"-->
-<!--                    android:visibility="gone"-->
-<!--                    android:padding="10dp">-->
-
-<!--                    <EditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:padding="10dp"-->
-<!--                        android:background="@drawable/custom_input"-->
-<!--                        android:drawableLeft="@drawable/custom_icon_key"-->
-<!--                        android:hint="Current Password"-->
-<!--                        android:layout_marginVertical="15dp"/>-->
-<!--                    <EditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="50dp"-->
-<!--                        android:padding="10dp"-->
-<!--                        android:background="@drawable/custom_input"-->
-<!--                        android:drawableLeft="@drawable/custom_icon_key"-->
-<!--                        android:hint="New Password"-->
-<!--                        android:layout_marginVertical="15dp"/>-->
-
-<!--                    <Button-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="right"-->
-<!--                        android:text="Update"-->
-<!--                        android:textColor="@color/white"-->
-<!--                        android:background="@color/yellowOrange"/>-->
-
-<!--                </LinearLayout>-->
-
 <!--            </androidx.cardview.widget.CardView>-->
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Notification"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:textStyle="bold" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp"
-                app:cardBackgroundColor="@color/light_green"
-                app:contentPadding="10dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:id="@+id/layout3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_notification"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Notifications"
-                            android:layout_margin="5dp"
-                            android:layout_marginLeft="50dp"
-                            android:fontFamily="@font/aloevera"
-                            android:textColor="@color/fontColor"
-                            android:textSize="20dp" />
-
-                    </LinearLayout>
-
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="5dp"
-                        app:track="@drawable/ic_track"
-                        android:thumb="@drawable/ic_thumb"/>
-                </RelativeLayout>
-
-            </androidx.cardview.widget.CardView>
 
 
             <TextView
