--- a/LearnMoto/app/src/main/res/layout/activity_student_view.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_student_view.xml
@@ -73,7 +73,7 @@
                             android:id="@+id/adviserName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Juan Dela Cruz"
+                            android:text="Name"
                             android:textColor="@color/black"
                             android:textSize="15dp" />
 
