--- a/LearnMoto/app/src/main/res/values/colors.xml
+++ b/LearnMoto/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="button_color">#689F38</color>
     <color name="green">#009306</color>
     <color name="light_green">#519259</color>
+    <color name="lighter_green">#C4E9C9</color>
     <color name="navback_color">#E7EAE8</color>
     <color name="light_white">#C8C8C8</color>
     <color name="startcolor">#A4EA73</color>
