--- a/LearnMoto/app/src/main/res/layout/activity_display_child_data.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_display_child_data.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Teacher.DisplayStudentData">
+    tools:context=".DisplayChildData">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
+        android:background="@color/transparent1"
         android:orientation="vertical">
 
         <LinearLayout
@@ -20,7 +21,7 @@
             android:layout_marginVertical="15dp">
 
             <ImageView
-                android:onClick="BackToTeacherView"
+                android:onClick="BackToParentView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_arrowback"/>
@@ -30,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textSize="25sp"
-                android:text="Student"
+                android:text="Child Information"
                 android:fontFamily="@font/aloevera"
                 android:textColor="@color/fontColor"/>
 
@@ -262,7 +263,7 @@
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:padding="5dp"
-                android:paddingStart="10dp"
+                android:paddingStart="30dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"/>
@@ -288,7 +289,7 @@
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:padding="5dp"
-                android:paddingStart="10dp"
+                android:paddingStart="20dp"
                 android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"/>
