--- a/LearnMoto/app/src/main/res/layout/activity_math.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_math.xml
@@ -1,43 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:background="@color/lighter_green"
     tools:context=".MathActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginVertical="10dp">
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:background="@color/lighter_green"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_marginVertical="10sp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:onClick="BackToQuiz"
-            android:src="@drawable/ic_arrowback" />
-
-        <TextView
-            android:id="@+id/txtSubject"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="SUBJECT"
-            android:textColor="@color/black"
-            android:fontFamily="@font/fingerpaint"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:orientation="horizontal"
+            android:layout_marginVertical="10dp">
+
+            <ImageView
+                android:layout_marginVertical="10sp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:onClick="BackToQuiz"
+                android:src="@drawable/ic_arrowback" />
+
+            <TextView
+                android:id="@+id/txtSubject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="SUBJECT"
+                android:textColor="@color/black"
+                android:fontFamily="@font/fingerpaint"
+                android:textAlignment="center"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mathRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+        <Button
+            android:id="@+id/Submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:text="Submit"
+            android:background="@color/teal_200"
+            android:layout_marginVertical="25dp"/>
+
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mathRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
-</LinearLayout>
+</ScrollView>
