--- a/LearnMoto/app/src/main/res/layout/children_list.xml
+++ b/LearnMoto/app/src/main/res/layout/children_list.xml
@@ -35,7 +35,17 @@
                 android:text="Child's name"
                 android:textSize="20dp"
                 android:textAlignment="center"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/studentID"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Id"
+                android:gravity="left"
+                android:visibility="gone"
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
         </RelativeLayout>
 
