--- a/LearnMoto/app/src/main/res/layout/activity_english_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_english_quiz.xml
@@ -41,7 +41,8 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:text="Please say the word below"
+        android:text="Say the Word"
+        android:textAlignment="center"
         android:layout_marginVertical="15dp"
         android:layout_gravity="center_horizontal"/>
 
