--- a/LearnMoto/app/src/main/res/layout/activity_kinder_filipino_read.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kinder_filipino_read.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Read Lesson"
+                android:text="Magbasa ng aralin"
                 android:textColor="@color/white"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
@@ -90,7 +90,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Read Now"
+                        android:text="Basahin"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:onClick="pdf"
