--- a/LearnMoto/app/src/main/res/layout/activity_display_child_data.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_display_child_data.xml
@@ -296,5 +296,58 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Science:"
+                android:padding="5dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/science"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:paddingStart="20dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Christian Living:"
+                android:padding="5dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/cl"
+                android:layout_marginHorizontal="10dp"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:paddingStart="20dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+
     </LinearLayout>
 </ScrollView>
