--- a/LearnMoto/app/src/main/res/layout/activity_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_story.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Preparatory.PStories"
+    tools:context=".Kinder.KStories"
     android:background="@drawable/background">
 
     <LinearLayout
