--- a/LearnMoto/app/src/main/res/layout/activity_filipino_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_filipino_quiz.xml
@@ -4,100 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/lighter_green"
     tools:context=".FilipinoQuiz">
 
-
     <LinearLayout
+        android:id="@+id/quizLaylout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:gravity="center">
+        android:padding="10dp">
 
-        <!--        <ImageView-->
-        <!--            android:id="@+id/Back"-->
-        <!--            android:layout_marginVertical="10sp"-->
-        <!--            android:layout_width="40dp"-->
-        <!--            android:layout_height="40dp"-->
-        <!--            android:layout_gravity="left"-->
-        <!--            android:src="@drawable/ic_left_arrow"-->
-        <!--            tools:ignore="RtlHardcoded" />-->
-
-        <TextView
-            android:id="@+id/totalQuestions"
-            android:layout_marginTop="20dp"
-            android:textSize="24sp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Total Questions"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/timeVIew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="60dp"
+                android:text="0:00"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/totalQuestions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Total Questions"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/questionnaire"
-            android:layout_marginTop="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:layout_marginTop="40dp"
+            android:text="questionnaire"
             android:textColor="@color/black"
-            android:text="questionnaire"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/AnsA"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ans A"
-            android:background="@color/fontColor"
-            android:textColor="@color/black"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="50dp"
+            android:background="@color/fontColor"
+            android:text="Ans A"
+            android:textColor="@color/black"
             tools:ignore="InvalidId" />
+
         <Button
             android:id="@+id/AnsB"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ans B"
-            android:background="@color/fontColor"
-            android:textColor="@color/black"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/fontColor"
+            android:text="Ans B"
+            android:textColor="@color/black"
             tools:ignore="InvalidId" />
 
         <Button
             android:id="@+id/AnsC"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ans C"
-            android:background="@color/fontColor"
-            android:textColor="@color/black"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/fontColor"
+            android:text="Ans C"
+            android:textColor="@color/black"
             tools:ignore="InvalidId" />
 
         <Button
             android:id="@+id/AnsD"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ans D"
-            android:background="@color/fontColor"
-            android:textColor="@color/black"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/fontColor"
+            android:text="Ans D"
+            android:textColor="@color/black"
             tools:ignore="InvalidId" />
 
         <Button
             android:id="@+id/submitBtn"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Submit"
             android:layout_marginVertical="20dp"
+            android:layout_marginTop="15dp"
             android:background="#5EE863"
-            android:textAllCaps="false"/>
+            android:text="Submit"
+            android:textAllCaps="false" />
 
     </LinearLayout>
 
