--- a/LearnMoto/app/src/main/res/layout/activity_announcement.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_announcement.xml
@@ -43,23 +43,23 @@
             android:onClick="SendAnnouncement"
             android:background="@color/teal_200"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="My Latest Announcement"
-            android:textAlignment="center"
-            android:layout_marginVertical="10dp"
-            android:fontFamily="@font/aloevera"
-            android:textColor="@color/fontColor"
-            android:textSize="17sp"/>
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="My Latest Announcement"-->
+<!--            android:textAlignment="center"-->
+<!--            android:layout_marginVertical="10dp"-->
+<!--            android:fontFamily="@font/aloevera"-->
+<!--            android:textColor="@color/fontColor"-->
+<!--            android:textSize="17sp"/>-->
 
-        <TextView
-            android:id="@+id/displayAnnouncement"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="15sp"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/displayAnnouncement"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textSize="15sp"-->
+<!--            />-->
 
 
     </LinearLayout>
