--- a/LearnMoto/app/src/main/res/layout/activity_first_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_first_story.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Nursery.Story.NFirstStory"
-    android:background="@drawable/background">
+    android:background="@drawable/blackboard">
 
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent1"
@@ -20,7 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:onClick="BackToStories"
-            android:src="@drawable/ic_arrowback"/>
+            android:src="@drawable/ic_arrowback"
+            app:tint="@color/white" />
 
         <ImageView
             android:layout_width="300dp"
@@ -36,6 +38,7 @@
             android:textSize="20dp"
             android:capitalize="characters"
             android:id="@+id/TitleStory"
+            android:textColor="@color/white"
             android:layout_gravity="center"/>
 
         <me.biubiubiu.justifytext.library.JustifyTextView
@@ -46,7 +49,7 @@
             android:paddingStart="15dp"
             android:layout_marginTop="16dp"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:text="Story"/>
 
