--- a/LearnMoto/app/src/main/res/layout/activity_fourth_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_fourth_story.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Nursery.Story.NFourthStory"
-    android:background="@drawable/background">
+    android:background="@drawable/blackboard">
 
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -19,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:onClick="BackToStories"
-            android:src="@drawable/ic_arrowback"/>
+            android:src="@drawable/ic_arrowback"
+            app:tint="@color/white" />
 
         <ImageView
             android:layout_width="300dp"
@@ -32,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:textColor="@color/white"
             android:textSize="20dp"
             android:capitalize="characters"
             android:id="@+id/TitleStory"
@@ -45,7 +48,7 @@
             android:paddingStart="15dp"
             android:layout_marginTop="16dp"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18dp"
             android:text="Story"/>
 
