--- a/LearnMoto/app/src/main/res/layout/activity_ksecond_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_ksecond_story.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Kinder.Story.KSecondStory"
-    android:background="@drawable/background">
+    android:background="@drawable/blackboard">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:onClick="BackToStories"
+            android:tint="@color/white"
             android:src="@drawable/ic_arrowback"/>
 
         <ImageView
@@ -36,7 +37,7 @@
             android:textSize="20sp"
             android:layout_marginVertical="5sp"
             android:capitalize="characters"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:id="@+id/TitleStory"
             android:layout_gravity="center"/>
 
@@ -48,7 +49,7 @@
             android:paddingStart="15dp"
             android:layout_marginTop="16dp"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="19sp"
             android:text="Story"/>
 
