--- a/LearnMoto/app/src/main/res/layout/activity_kthird_story.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kthird_story.xml
@@ -5,9 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Kinder.Story.KThirdStory"
-    android:background="@drawable/background">
+    android:background="@drawable/blackboard">
 
     <LinearLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent1"
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:tint="@color/white"
             android:onClick="BackToStories"
             android:src="@drawable/ic_arrowback"/>
 
@@ -36,7 +38,7 @@
             android:textSize="20sp"
             android:layout_marginVertical="5sp"
             android:capitalize="characters"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:id="@+id/TitleStory"
             android:layout_gravity="center"/>
 
@@ -48,7 +50,7 @@
             android:paddingStart="15dp"
             android:layout_marginTop="16dp"
             android:padding="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="19sp"
             android:text="Story"/>
 
