--- a/LearnMoto/app/src/main/res/layout/activity_main.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ImageView
+        android:layout_width="42dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="guideBtn"
+        android:src="@drawable/ic_information"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/main_welcome"
         android:layout_width="wrap_content"
