--- a/LearnMoto/app/src/main/res/layout/activity_sci_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_sci_quiz.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:background="@drawable/quizbg"
     android:gravity="center_horizontal">
 
     <LinearLayout
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:layout_marginStart="40dp"
-            android:text="Take Me!"
+            android:text="Let's Start"
             android:textColor="@color/black"
             android:textSize="40dp" />
 
@@ -32,11 +32,12 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="#42E649"
+        android:background="#fff"
         android:onClick="btnStart"
         android:text="Start Quiz!"
-        android:textSize="20dp"/>
+        android:fontFamily="@font/roboto_bold"
+        android:textSize="22sp"/>
 
 </LinearLayout>
