--- a/LearnMoto/app/src/main/res/layout/activity_display_student_data.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_display_student_data.xml
@@ -257,7 +257,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Subject Quiz Scores"
+                android:text="Quiz Scores"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -418,5 +418,179 @@
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="6dp"
+            android:layout_marginVertical="10dp"
+            app:cardElevation="3dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Activity Scores"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/roboto_bold"
+                android:layout_marginVertical="15dp"/>
+
+            <LinearLayout
+                android:layout_marginVertical="22dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="English :"
+                        android:padding="5dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/englishAct"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:padding="5dp"
+                        android:paddingStart="5dp"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Math:"
+                        android:padding="5dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/mathAct"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:padding="5dp"
+                        android:paddingStart="5dp"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        tools:ignore="RtlSymmetry" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/filLayoutAct"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Filipino:"
+                        android:padding="5dp"
+                        android:fontFamily="@font/roboto_bold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/filipinoAct"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:padding="5dp"
+                        android:paddingStart="5dp"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Christian Living:"
+                        android:padding="5dp"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/roboto_bold"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/clAct"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:padding="5dp"
+                        android:paddingStart="5dp"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Science:"
+                        android:padding="5dp"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/roboto_bold"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/scienceAct"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:padding="5dp"
+                        android:paddingStart="5dp"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
     </LinearLayout>
 </ScrollView>
