--- a/LearnMoto/app/src/main/res/layout/activity_kinder_math_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kinder_math_quiz.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Take A Quiz"
+                android:text="Assessment"
                 android:textColor="@color/white"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
@@ -95,6 +95,16 @@
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:onClick="MathQuiz"
+                        android:drawableEnd="@drawable/ic_reading"
+                        android:layout_gravity="center"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Activity Now"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:onClick="mathActivity"
                         android:drawableEnd="@drawable/ic_reading"
                         android:layout_gravity="center"/>
 
