--- a/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Take A Quiz"
+                android:text="Assessment"
                 android:textColor="@color/white"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
